tests/snapshots/run_wpt_conformance__litert_min_float32_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "min.https.any.js",
    "min float32 5D tensors",
    "litert",
    "PASS",
)
